--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en"> <!--beginning of html content, specificed attribute lang to english-->
     <head>
         <title> Allison Serio | Software Engineer </title>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Recursive&family=Roboto+Mono:ital@1&display=swap" rel="stylesheet">
         <style>
@@ -20,8 +21,8 @@
         <div>
             <nav class="nav justify-content-end">
                 <a class="nav-link" href="#" style="color:white;">About Me</a>
-                <a class="nav-link" href="#">Projects</a>
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link" href="#" style="color:white;">Projects</a>
+                <a class="nav-link" href="#" style="color:white;">Gallery</a>
               </nav>
         </div>
         <div>
