--- a/index.html
+++ b/index.html
@@ -11,33 +11,148 @@
             body {
                 color: white;
                 font-family: 'Roboto Mono', monospace;
-                background-color: black;
+                background-color:powderblue;
             }
         </style>
     </head>
-    <body> <!--info to be seen on webpage-->
-        <div class="fixed-top" style="height: 10px; padding-top: 0px;">
-            <nav id="nav" class="nav justify-content-end">
-                <a class="nav-link" href="#bio">About Me</a>
-                <a class="nav-link" href="#projects" >Projects</a>
-                <a class="nav-link" href="#gallery" >Gallery</a>
-              </nav>
-        </div>
+    <body>
+        <nav id="nav" class="navbar navbar-expand-lg sticky-top navbar-dark bg" style="background-color: powderblue;">
+            <a class="navbar-brand" href="#">Allison Serio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <a class="nav-item nav-link" href="#bio">About Me</a>
+                <a class="nav-item nav-link" href="#projects">Projects</a>
+                <a class="nav-item nav-link" href="#gallery">Gallery</a>
+                <a class="nav-item nav-link" href="#contact">Contact</a>
+            </div>
+        </nav>
 
-        <div style="padding: 100px;">
-            <h1> Allison Serio</h1> 
-        </div>
-
-        <div id="bio">
+        <div id="bio" style="padding-top: 50px;">
             <h4>About Me</h4>
+            <p style="padding: 50px;">
+                Hello! I'm Allison, a 4th year MIT student studying computer science and architecture. My interests include human computer
+                interaction and user experience, and I love drawing and animation. Below is a sample of what I've been currently doing, check it out!
+            </p> 
         </div>
 
-        <div id="projects" style="color: black; background-color: white;">
+        <div id="projects" style="height: 100vh; padding-top: 50px;">
             <h4>Projects</h4>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div id="arrow" class="card mb-3" style="border-radius: 5%;">
+                            <img id="arrow1" class="card-img" src="assets/download_minpath.jpg" alt="Card image" style="border-radius: 5%;">
+                            <div class="card-img-overlay">
+                              <h5 class="card-title" style="font-weight: bold; text-shadow: 0px 0px #2600ff;">Texture Synthesis</h5>
+                              <p class="card-text">Fall 2020 Computer Graphics project</p>
+                              <p class="card-text">Novemeber 2020</p>
+                              <a href="https://github.com/allisro/6837-final-project" class="card-link">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card mb-3" style="border-radius: 5%; color:black;">
+                            <img class="card-img" src="assets/bizhub.png" alt="Card image" style="border-radius: 5%;">
+                            <div class="card-img-overlay">
+                              <h5 class="card-title" style="font-weight: bold">Cambridge BizHub</h5>
+                              <p class="card-text">Fall 2020 Software Studio project</p>
+                              <p class="card-text">November 2020</p>
+                              <a href="https://cambridge-bizhub.herokuapp.com/" class="card-link">Cambridge BizHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col align-self-center">
+                        <div class="card mb-3" style="border-radius: 5%; color: black;">
+                            <img class="card-img" src="assets/graph.png" alt="Card image" style="border-radius: 5%;">
+                            <div class="card-img-overlay">
+                              <h5 class="card-title" style="font-weight: bold;">Sentiment Analysis</h5>
+                              <p class="card-text">Afiniti externship project</p>
+                              <p class="card-text">January 2020</p>
+                              <a href="#" class="card-link">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <div class="card mb-3" style="border-radius: 5%; color: black;">
+                            <img class="card-img" src="assets/body.png" alt="Card image" style="border-radius: 5%;">
+                            <div class="card-img-overlay">
+                              <h5 class="card-title" style="font-weight: bold;">Smart Textiles</h5>
+                              <p class="card-text">MIT Media Research project</p>
+                              <p class="card-text">February 2020</p>
+                              <a href="#" class="card-link">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3" style="border-radius: 5%; color: black;">
+                            <img class="card-img" src="assets/1527278353158.jpg" alt="Card image" style="border-radius: 5%;">
+                            <div class="card-img-overlay">
+                              <h5 class="card-title" style="font-weight: bold;">Direct Access Protocol</h5>
+                              <p class="card-text">NovoSpace</p>
+                              <p class="card-text">October 2020</p>
+                              <a href="https://github.com/allisro/Sentiment-Analysis-Project" class="card-link">GitLab</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card mb-3" style="border-radius: 5%; color: black;">
+                            <img class="card-img" src="assets/image.png" alt="Card image" style="border-radius: 5%;">
+                            <div class="card-img-overlay">
+                              <h5 class="card-title" style="font-weight: bold;">CLC South Sudan</h5>
+                              <p class="card-text">Develop 4 Good Project</p>
+                              <p class="card-text">September 2020</p>
+                              <a href="https://clcsouthsudan.wixsite.com/home" class="card-link">CLC South Sudan</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+            
+
+        <div id="gallery" style="height: 100vh; padding-top: 50px;">
+            <h4>Gallery</h4>
+
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="..." alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="..." alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="..." alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+
         </div>
 
-        <div id="gallery">
-            <h4>Gallery</h4>
+        <div id="contact" style="height: 50vh; padding-top: 50px;">
+            <h4>Contact</h4>
+            <span>aserio@mit.edu</span>
+            <a id="linkedin" href="https://www.linkedin.com/in/allison-serio">LinkedIn Profile</a>
+            <a id="github" href="https://github.com/allisro">Github</a>
         </div>   
     </body>
 </html>
+
+<script>
+</script>
