--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
         <link rel="stylesheet" href="my-style.css">
         <style>
             body {
-                color: white;
+                color: black;
                 font-family: 'Roboto Mono', monospace;
-                background-color:powderblue;
+                background-color:white;
             }
         </style>
     </head>
     <body>
-        <nav id="nav" class="navbar navbar-expand-lg sticky-top navbar-dark bg" style="background-color: powderblue;">
-            <a class="navbar-brand" href="#">Allison Serio</a>
+        <nav id="nav" class="navbar navbar-expand-lg sticky-top navbar-dark bg" style="background-color: black;">
+            <a class="navbar-brand" href="#" style="font: weight bold;">Allison Serio</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,15 +37,15 @@
             </p> 
         </div>
 
-        <div id="projects" style="height: 100vh; padding-top: 50px;">
-            <h4>Projects</h4>
+        <div id="projects" style="padding-top: 50px;">
+            <h4 style="margin-bottom: 20px;">Projects</h4>
 
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        <div id="arrow" class="card mb-3" style="border-radius: 5%;">
-                            <img id="arrow1" class="card-img" src="assets/download_minpath.jpg" alt="Card image" style="border-radius: 5%;">
-                            <div class="card-img-overlay">
+                    <div class="col" style="padding: 0px;">
+                        <div id="arrow" class="card border-dark" style="border-radius: 2%;">
+                            <img id="arrow1" class="card-img" src="assets/download_minpath.jpg" alt="Card image" style="border-radius: 2%;">
+                            <div class="card-img-overlay" style="color: white;">
                               <h5 class="card-title" style="font-weight: bold; text-shadow: 0px 0px #2600ff;">Texture Synthesis</h5>
                               <p class="card-text">Fall 2020 Computer Graphics project</p>
                               <p class="card-text">Novemeber 2020</p>
@@ -54,9 +54,9 @@
                         </div>
                     </div>
 
-                    <div class="col">
-                        <div class="card mb-3" style="border-radius: 5%; color:black;">
-                            <img class="card-img" src="assets/bizhub.png" alt="Card image" style="border-radius: 5%;">
+                    <div class="col" style="padding: 0px;">
+                        <div class="card border-secondary" style="border-radius: 2%; color:black; top: 75px;">
+                            <img class="card-img" src="assets/bizhub.png" alt="Card image" style="border-radius: 2%;">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold">Cambridge BizHub</h5>
                               <p class="card-text">Fall 2020 Software Studio project</p>
@@ -66,9 +66,9 @@
                         </div>
                     </div>
 
-                    <div class="col align-self-center">
-                        <div class="card mb-3" style="border-radius: 5%; color: black;">
-                            <img class="card-img" src="assets/graph.png" alt="Card image" style="border-radius: 5%;">
+                    <div class="col">
+                        <div class="card border-light" style="border-radius: 2%; color: black;">
+                            <img class="card-img" src="assets/graph.png" alt="Card image" style="border-radius: 2%;">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold;">Sentiment Analysis</h5>
                               <p class="card-text">Afiniti externship project</p>
@@ -80,9 +80,9 @@
                 </div>
 
                 <div class="row">
-                    <div class="col">
-                        <div class="card mb-3" style="border-radius: 5%; color: black;">
-                            <img class="card-img" src="assets/body.png" alt="Card image" style="border-radius: 5%;">
+                    <div class="col" style="padding: 0px;">
+                        <div class="card" style="border-radius: 2%; color: black; width: 370px;">
+                            <img class="card-img" src="assets/body.png" alt="Card image" style="border-radius: 2%; display: block; margin-left: auto; margin-right: auto; height: 14rem; width: 370px">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold;">Smart Textiles</h5>
                               <p class="card-text">MIT Media Research project</p>
@@ -91,8 +91,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card mb-3" style="border-radius: 5%; color: black;">
+                    <div class="col" style="padding: 0px;">
+                        <div class="card border-dark" style="border-radius: 2%; color: black; top: -125px;">
+                            <img class="card-img" src="assets/Picture1.png" alt="Card image" style="border-radius: 2%;">
+                            <div class="card-img-overlay" style="color: white;">
+                              <h5 class="card-title" style="font-weight: bold;">Mesoscale Energy Model</h5>
+                              <p class="card-text">Leventhal Center of Advanced Urbanism</p>
+                              <p class="card-text">December 2019</p>
+                              <a href="https://github.com/allisro/Sentiment-Analysis-Project" class="card-link">GitHub</a>
+                            </div>
+                        </div>
+                    </div> 
+                    <!-- <div class="col">
+                        <div class="card border-secondary mb-3" style="border-radius: 5%; color: black;">
                             <img class="card-img" src="assets/1527278353158.jpg" alt="Card image" style="border-radius: 5%;">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold;">Direct Access Protocol</h5>
@@ -101,10 +112,10 @@
                               <a href="https://github.com/allisro/Sentiment-Analysis-Project" class="card-link">GitLab</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col">
-                        <div class="card mb-3" style="border-radius: 5%; color: black;">
-                            <img class="card-img" src="assets/image.png" alt="Card image" style="border-radius: 5%;">
+                        <div class="card mb-3" style="border-radius: 2%; color: black;">
+                            <img class="card-img" src="assets/image.png" alt="Card image" style="border-radius: 2%;">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold;">CLC South Sudan</h5>
                               <p class="card-text">Develop 4 Good Project</p>
