--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Recursive&family=Roboto+Mono:ital@1&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Alegreya&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="my-style.css">
         <style>
             body {
-                color: black;
-                font-family: 'Roboto Mono', monospace;
+                color:black;
+                font-family: 'Archivo', sans-serif;
                 background-color:white;
             }
         </style>
@@ -32,7 +40,7 @@
         <div id="bio" style="padding-top: 50px;">
             <h4>About Me</h4>
             <p style="padding: 50px;">
-                Hello! I'm Allison, a 4th year MIT student studying computer science and architecture. My interests include human computer
+                Hello! I'm Allison, a 4th year MIT student studying computer science and architecture. I'm originally from sunny Los Angeles, CA, and my interests include human computer
                 interaction and user experience, and I love drawing and animation. Below is a sample of what I've been currently doing, check it out!
             </p> 
         </div>
@@ -55,7 +63,7 @@
                     </div>
 
                     <div class="col" style="padding: 0px;">
-                        <div class="card border-secondary" style="border-radius: 2%; color:black; top: 75px;">
+                        <div class="card border-secondary" style="border-radius: 2%; color:black; top: 71px;">
                             <img class="card-img" src="assets/bizhub.png" alt="Card image" style="border-radius: 2%;">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold">Cambridge BizHub</h5>
@@ -66,9 +74,9 @@
                         </div>
                     </div>
 
-                    <div class="col">
-                        <div class="card border-light" style="border-radius: 2%; color: black;">
-                            <img class="card-img" src="assets/graph.png" alt="Card image" style="border-radius: 2%;">
+                    <div class="col" style="padding: 0px;">
+                        <div class="card border-secondary" style="border-radius: 2%; color: black; top: 172px;">
+                            <img class="card-img" src="assets/Picture3.png" alt="Card image" style="border-radius: 2%;">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold;">Sentiment Analysis</h5>
                               <p class="card-text">Afiniti externship project</p>
@@ -81,7 +89,7 @@
 
                 <div class="row">
                     <div class="col" style="padding: 0px;">
-                        <div class="card" style="border-radius: 2%; color: black; width: 370px;">
+                        <div class="card" style="border-radius: 2%; color: black; width: 380px;">
                             <img class="card-img" src="assets/body.png" alt="Card image" style="border-radius: 2%; display: block; margin-left: auto; margin-right: auto; height: 14rem; width: 370px">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold;">Smart Textiles</h5>
@@ -92,7 +100,7 @@
                         </div>
                     </div>
                     <div class="col" style="padding: 0px;">
-                        <div class="card border-dark" style="border-radius: 2%; color: black; top: -125px;">
+                        <div class="card border-dark" style="border-radius: 2%; color: black; top: -135px;">
                             <img class="card-img" src="assets/Picture1.png" alt="Card image" style="border-radius: 2%;">
                             <div class="card-img-overlay" style="color: white;">
                               <h5 class="card-title" style="font-weight: bold;">Mesoscale Energy Model</h5>
@@ -113,8 +121,8 @@
                             </div>
                         </div>
                     </div> -->
-                    <div class="col">
-                        <div class="card mb-3" style="border-radius: 2%; color: black;">
+                    <div class="col" style="padding: 0px;">
+                        <div class="card border-secondary" style="border-radius: 2%; color: black; max-width: 250px; top: 27px;">
                             <img class="card-img" src="assets/image.png" alt="Card image" style="border-radius: 2%;">
                             <div class="card-img-overlay">
                               <h5 class="card-title" style="font-weight: bold;">CLC South Sudan</h5>
@@ -129,7 +137,7 @@
         </div>
             
 
-        <div id="gallery" style="height: 100vh; padding-top: 50px;">
+        <!-- <div id="gallery" style="height: 100vh; padding-top: 50px;">
             <h4>Gallery</h4>
 
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -154,13 +162,16 @@
                 </a>
               </div>
 
-        </div>
+        </div> -->
 
         <div id="contact" style="height: 50vh; padding-top: 50px;">
             <h4>Contact</h4>
-            <span>aserio@mit.edu</span>
-            <a id="linkedin" href="https://www.linkedin.com/in/allison-serio">LinkedIn Profile</a>
-            <a id="github" href="https://github.com/allisro">Github</a>
+            <div style="display: flex; justify-content: center;">
+                <span>aserio@mit.edu</span>
+                <a id="linkedin" href="https://www.linkedin.com/in/allison-serio">LinkedIn Profile</a>
+                <a id="github" href="https://github.com/allisro">Github</a>
+
+            </div>
         </div>   
     </body>
 </html>
