--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <a class="nav-item nav-link" href="#bio">About Me</a>
                 <a class="nav-item nav-link" href="#projects">Projects</a>
-                <a class="nav-item nav-link" href="#gallery">Gallery</a>
+                <!-- <a class="nav-item nav-link" href="#gallery">Gallery</a> -->
                 <a class="nav-item nav-link" href="#contact">Contact</a>
             </div>
         </nav>
@@ -162,7 +162,7 @@
 
         </div> -->
 
-        <div id="contact" style="height: 50vh; padding-top: 50px;">
+        <div id="contact" style="height: 200px; padding-top: 50px;">
             <h4>Contact</h4>
             <div style="display: flex; justify-content: center;">
                 <span>aserio@mit.edu</span>
