--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <link href="https://fonts.googleapis.com/css2?family=B612:wght@400;700&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=B612:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+<link rel="icon" 
+      type="image/png" 
+      href="1f349.png">
         <link rel="stylesheet" href="my-style.css">
         <style>
             body {
