--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <link rel="stylesheet" href="my-style.css">
         <style>
             body {
-                color:#1000c3;
+                color:rgb(0, 189, 220);
                 font-family: 'B612', sans-serif;
-                background-color:#7bfbcc;
+                background-color:rgb(156,246,235);
             }
         </style>
     </head>
     <body>
-        <nav id="nav" class="navbar navbar-expand-lg sticky-top navbar-dark bg" style="color: white;background-color: #1000c3;">
+        <nav id="nav" class="navbar navbar-expand-lg sticky-top navbar-dark bg" style="color: white;background-color: rgb(0, 189, 220);">
             <a class="navbar-brand" href="#" style="font-weight:bold; font-style: italic;">Allison Serio</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
